<resources>
    <string name="app_name">Amun Store</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_categories">Categories</string>
    <string name="title_profile">Profile</string>
    <string name="log_in">Log in</string>
    <string name="login_with_one_of_the_following_options">Login with one of the following options</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="sign_up_with_one_of_the_following_options">Sign up with one of the following options</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="wish_list">Wish List</string>
    <string name="no_internet_connection">No Connection</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="sale">Sale</string>
    <string name="kids">Kids</string>
    <string name="home_page">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_products">Search Products…</string>
    <string name="brands">Brands</string>
    <string name="product_vendor">ProductVendor</string>
    <string name="no_results_found">No results found</string>
    <string-array name="sortArr">
        <item>SORT</item>
        <item>price: Low to High</item>
        <item>price: High to Low</item>
        <item>Alphabetically</item>
        <item>none</item>
    </string-array>
    <string name="save_item">Save item</string>
    <string name="buy_now">Buy now</string>
    <string name="product_option">Product options</string>
    <string name="not_available">Not available</string>
    <string name="pro_id" translatable="false">pro_id_bundle</string>
    <string name="enter_code">Enter Code</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="product_details">Product Details</string>
    <string name="size">Size</string>
    <string name="check">CHECK</string>
    <string name="favorite">Favourite</string>
    <string name="share">Share</string>
    <string name="shopping_bag">Shopping bag</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="welcome">Welcome,</string>
    <string name="full_name">*FULL NAME</string>
    <string name="category">Category</string>
    <string name="shop">Shop</string>
    <string name="checkout">CHECKOUT</string>
    <string name="save">save</string>
    <string name="phone_number">*Phone Number</string>
    <string name="city"> * City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="post_zip_code"> * Post/Zip Code</string>
    <string name="address_line_1"> * Address Line 1</string>
    <string name="state_province_optional">*State/province</string>
    <string name="country"> * Country</string>
    <string name="remove">Remove</string>
    <string name="zero">0</string>
    <string name="size_name">"Size: "</string>
    <string name="change_address"> Change Address</string>
    <string name="continue_address">Continue</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="financial_state">Payment State</string>
    <string name="coupons">Coupons</string>
    <string name="avaliableCoupons">Available coupons</string>
    <string name="copy">Copy</string>
    <string name="discount_value">Discount value</string>
    <string name="start_date">Start Date :</string>
    <string name="status">Status :</string>
    <string name="available">Available</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="login_with_email">Login with email</string>
    <string name="email_id">Email id</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet ?</string>
    <string name="login_to_a_m_u_n">Login to A M U N</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_successful">Login successful</string>
    <string name="create_new_password">Create new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update_password">Update password</string>
    <string name="enter_your_email_id_for_the_verification_process_new_will_send_4_digits_code_to_your_email">Enter your email id for the verification process now will send 4 digits code to your email</string>
    <string name="continue_">Continue</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in">Sing in</string>
    <string name="signup_with_google">Signup with google</string>
    <string name="signup_to_a_m_u_n">Signup tp A M U N</string>
    <string name="signup_with_facebook">Signup with facebook</string>
    <string name="signup_successful">Signup successful</string>
    <string name="network_error">Network Error</string>
    <string name="fields_are_empty">Fields are empty</string>
    <string name="two_passwords_are_not_similar">Two passwords are not similar</string>
    <string name="email_format_is_not_accepted">Email format is not accepted</string>
    <string name="password_cannot_be_less_than_5_chars">Password can\'t be less than 5 characters</string>
    <string name="login_failed">Login Failed</string>
    <string name="done">Done</string>
    <string name="color_">"Color: "</string>
    <string name="price">Price</string>
    <string name="_87_reviews">87 Reviews</string>
    <string name="facebook_app_id">344977891111078</string>
    <string name="fb_login_protocol_scheme">b812555ec2b90e7193d733f6f9d0e3cb</string>
    <string name="facebook_client_token">8eb9f3215827292004e8856834ca83e8</string>
    <string name="shopping">Shopping</string>
    <string name="no_items_available">No items available</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="google_pay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="google_wallet_status_unavailable" translatable="false">Unfortunately, Google Wallet is not available on this phone.</string>
    <string name="google_pay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="add_google_wallet_success" translatable="false">The pass was added successfully!</string>
    <string name="failed">failed</string>
    <string name="canceled">Canceled</string>
    <string name="no_orders">No orders</string>
    <string name="pay_when_the_order_arrive">Pay when the order arrive</string>
    <string name="you_can_pick_between_cash_on_delivery_and_pay_with_google_payment">You can pick between cash on delivery and pay with google payment</string>
    <string name="specify_payment_method">Specify payment method</string>
    <string name="order_details">Order detail</string>
    <string name="apply">Apply</string>
    <string name="signup_failed">Signup failed</string>
    <string name="thank_you_your_order_will_be_shipped_soon">thank you, your order will be shipped soon</string>
    <string name="please_try_again_later_or_contact_us">\tplease try again later or contact us</string>
    <string name="succuss">Success</string>
    <string name="low_to_high">Price: Low to High</string>
    <string name="highToLow">Price: High to Low</string>
    <string name="alphabetical">A - Z</string>
    <string name="all">All products</string>
    <string name="sort_by">Sort By:</string>
    <string name="a_m_u_n_store">A m u n Store</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="skip">Skip</string>
    <string name="title_slider_1">Search products</string>
    <string name="title_slider_2">Fast to add cart</string>
    <string name="title_slider_3">Fast Delivery</string>
    <string name="title_slider_4">Secure Payment</string>
    <string name="title_slider_5">Online Support</string>
    <string name="content_slider_5">provide assistance to help making purchase decisions to resolving issues</string>
    <string name="content_slider_4">Provides faster payment processing · Accepts multiple payment options</string>
    <string name="content_slider_3">buy goods and services from any part of the world safely and securely on time.</string>
    <string name="content_slider_2">choose items to purchase without actually completing the payment.</string>
    <string name="content_slider_1">navigation and search for exactly what you want with multiple filtration way.</string>
    <string name="noConnection">No Internet connection</string>
    <string name="connected">connected</string>
    <string name="egp">EGP</string>
    <string name="edit_profile">Profile</string>
    <string name="address">My Addresses</string>
    <string name="faq">FAQ</string>
    <string name="about_shopy">About Amoun</string>
    <string name="developed_by">Developed By</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="addresses">Addresses</string>
    <string name="new_address">New Address</string>
    <string name="default_address">Default Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="setAsDefault">Set Default</string>
    <string name="about_us">About Amun</string>
    <string name="about_us_tv"><![CDATA[Amun is a unique and modern e-commerce mobile application built with users in mind. It offers high level of interactivity and optimum performance to ensure user satisfaction. It is perfect for your digital store, watch store, men store, women store, clothing store, furniture store, bookstore, cosmetics shop, luxury jewelry & accessories store and you name it. Furthermore, this amazing platform comes with lots of features –cart, fast search, filter and sorting options, Slider with smooth transition effects and a lot more. You have all the power to make an amazing, fast, user friendly, secure ecommerce store that your customers will love to browse and buy from. Let’s experience this awesomeness and celebrate your growth with Amun ]]></string>
    <string name="settings">Settings</string>
    <string name="try_again">Try again</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="no_address_available">no address available</string>
    <string name="previousOrders">Previous Orders</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_complete_payment_with_google_pay">Do you want to complete payment with google pay ?</string>
    <string name="do_you_want_to_complete_order_with_cash_on_delivery">do you want to complete order with cash on delivery ?</string>
    <string name="shippingAddress">Shipping Address</string>
</resources>