<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="@+id/login_logWithFacebookBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_logWithFacebookBtn"
        app:layout_constraintTop_toBottomOf="@+id/login_logWithFacebookBtn">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_to_a_m_u_n"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_logWithFacebookBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="19dp"
        android:padding="16dp"
        android:text="@string/login_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_loginTxt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_loginWithEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"

        android:background="@drawable/round_corners"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="true"
        android:text="@string/login_with_email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_linearlayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_linearlayout"
        app:layout_constraintTop_toBottomOf="@+id/login_linearlayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginBottom="64dp"
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/login_signupTxt"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_signupTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="#042E78"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>