<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_nameField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/full_name"
                    android:inputType="text|textNoSuggestions"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_phoneField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nameField">

                <EditText
                    android:id="@+id/phone_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_cityField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phoneField">

                <EditText
                    android:id="@+id/city_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/city"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_stateField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cityField">

                <EditText
                    android:id="@+id/state_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/state_province_optional"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_postCodeField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_stateField">

                <EditText
                    android:id="@+id/postCode_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/post_zip_code"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_addressField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_postCodeField">

                <EditText
                    android:id="@+id/address_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/address_line_1"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_address2Field"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_addressField">

                <EditText
                    android:id="@+id/address2_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/address_line_2"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_countryField"
                style="@style/AddressTextInputLayout"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_address2Field">

                <EditText
                    android:id="@+id/country_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/country"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/hyber_blue"
        android:padding="12dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

