<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_loginWithEmailBtn" />

    <TextView
        android:id="@+id/signup_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/log_in"
        android:textColor="#042E78"
        app:layout_constraintStart_toEndOf="@+id/signup_text"
        app:layout_constraintTop_toTopOf="@+id/signup_text" />

    <LinearLayout
        android:id="@+id/signup_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="@+id/signup_logWithFacebookBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_logWithFacebookBtn"
        app:layout_constraintTop_toBottomOf="@+id/signup_logWithFacebookBtn">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </LinearLayout>

    <TextView
        android:id="@+id/signup_signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/signup_to_a_m_u_n"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signup_logWithGoogleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_corners"
        android:drawableStart="@mipmap/ic_google"
        android:text="@string/signup_with_google"
        android:textColor="@color/black"
        app:iconTintMode="src_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_signupTxt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signup_logWithFacebookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="19dp"
        android:background="@drawable/round_corners"
        android:drawableStart="@mipmap/ic_facebook"
        android:text="@string/signup_with_facebook"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/signup_logWithGoogleBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_logWithGoogleBtn"
        app:layout_constraintTop_toBottomOf="@+id/signup_logWithGoogleBtn" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_loginWithEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signup_with_email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/signup_linearlayout"
        app:layout_constraintStart_toStartOf="@+id/signup_linearlayout"
        app:layout_constraintTop_toBottomOf="@+id/signup_linearlayout" />
</androidx.constraintlayout.widget.ConstraintLayout>