<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/about_shopy"
            android:textSize="17sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:paddingStart="12dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar_title"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/aboutUsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_title" />

        <TextView
            android:id="@+id/aboutUsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_tv"
            android:textSize="16sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutUsLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>